--- a/app/src/main/res/layout/layout3.xml
+++ b/app/src/main/res/layout/layout3.xml
@@ -40,8 +40,9 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="177dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <EditText
@@ -49,7 +50,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
-                android:ems="10"
                 android:hint="Фамилия"
                 android:inputType="textPersonName" />
 
@@ -58,7 +58,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
-                android:ems="10"
                 android:hint="Имя"
                 android:inputType="textPersonName" />
 
@@ -67,7 +66,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
-                android:ems="10"
                 android:hint="Отчество"
                 android:inputType="textPersonName" />
 
@@ -76,6 +74,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <EditText
@@ -83,7 +82,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
-                android:ems="10"
                 android:hint="Номер группы"
                 android:inputType="number" />
 
