--- a/app/src/main/res/layout/layout2.xml
+++ b/app/src/main/res/layout/layout2.xml
@@ -46,21 +46,19 @@
 
             <EditText
                 android:id="@+id/surname"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginBottom="2dp"
-                android:ems="10"
                 android:hint="Фамилия"
                 android:inputType="textPersonName" />
 
             <EditText
                 android:id="@+id/name"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginBottom="2dp"
-                android:ems="10"
                 android:hint="Имя"
                 android:inputType="textPersonName" />
         </LinearLayout>
@@ -70,7 +68,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
-            android:ems="10"
             android:hint="Отчество"
             android:inputType="textPersonName" />
 
@@ -81,21 +78,19 @@
 
             <EditText
                 android:id="@+id/group"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginBottom="2dp"
-                android:ems="10"
                 android:hint="Номер группы"
                 android:inputType="number" />
 
             <EditText
                 android:id="@+id/faculty"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginBottom="10dp"
-                android:ems="10"
                 android:hint="Факультет"
                 android:inputType="text" />
         </LinearLayout>
